quality.css --> fixing issue with the quality chooser being mis-aligned quality.js --> fixing bug where if the first quality in the quality group is unsupported by the browser the video errors out...(will now cycle through the quality source until a playable source is found)

--- a/src/quality/quality.css
+++ b/src/quality/quality.css
@@ -9,8 +9,9 @@
     color: #fff;
     font-size: 11px;
     line-height: normal;
-    margin: 11px 0 0;
+    margin: 9px 0 0;
     width: 36px;
+    font-weight: 700;
 }
 
 .mejs__qualities-selector,
